syntax = "proto3";

package chat;

option go_package = "github.com/toffernator/chitty-chat/chat/protobuf";

message Address {
    int64 lamportTs = 1;
    string address = 2;
}

message StatusOk {
    int64 lamportTs = 1;
}

message Status {
    int64 lamportTs = 1;
    enum StatusCode {
        OK = 0;
        INVALIDMSG = 1;
        INCOMPLETEBROADCAST = 2;
    }
    StatusCode statusCode = 3;
}

message Message {
    int64 lamportTs = 1;
    string contents = 2;
    string sender = 3;
}

service ChatService {
    rpc Join(Address) returns (StatusOk);
    rpc Leave(Address) returns (StatusOk);
    rpc Publish(Message) returns (Status);
}